--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_linetype_manual)
