Added plotClusterRidgesInSample. Updated docs. Updated tests.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,12 @@
 export(faust)
 export(growAnnotationForest)
 export(mkAFPlotsForAlevel)
+export(plotClusterRidgesInSample)
 export(plotFaustGates)
 import(tidyr)
 importFrom(Biobase,AnnotatedDataFrame)
 importFrom(Biobase,pData)
 importFrom(Rcpp,sourceCpp)
-importFrom(cowplot,draw_label)
-importFrom(cowplot,get_legend)
-importFrom(cowplot,ggdraw)
-importFrom(cowplot,plot_grid)
 importFrom(cowplot,save_plot)
 importFrom(data.table,fwrite)
 importFrom(dplyr,group_by)
@@ -20,7 +17,7 @@ importFrom(dplyr,summarize)
 importFrom(flowCore,exprs)
 importFrom(flowCore,parameters)
 importFrom(flowWorkspace,getData)
-importFrom(flowWorkspace,load_gs)
+importFrom(flowWorkspace,gh_pop_get_data)
 importFrom(flowWorkspace,sampleNames)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
