Processing channel bounds uniformly creates a list, no matter input. Re-factoring to remove notes and warnings from devtools::check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_hex)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_hline)
@@ -39,6 +41,7 @@ importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(ggridges,geom_density_ridges)
+importFrom(ggridges,position_points_jitter)
 importFrom(grDevices,nclass.FD)
 importFrom(scamp,scamp)
 importFrom(stats,density)
