Updated nameOccuranceNumber estimation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(data.table,fwrite)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,summarize)
+importFrom(fdrtool,gcmlcm)
 importFrom(flowCore,exprs)
 importFrom(flowCore,parameters)
 importFrom(flowWorkspace,getData)
