--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: faust
 Title: Full Annotation Using Shape-constrained Trees
-Version: 0.3.2
+Version: 0.3.3
 Authors@R: c(person("Evan", "Greene", email = "egreene@fredhutch.org", role = c("aut", "cre")),
    	   person("Laurie", "Davies", role = c("ctb")),	       
 	   person("J.R.M.", "Hosking", role=c("ctb")),
@@ -36,6 +36,7 @@ Imports:
     viridis,
     cowplot,
     ggridges,
+    fdrtool,
     Rcpp
 VignetteBuilder: knitr
 LinkingTo: Rcpp    
