Add annotation embedding function: makeAnnotationEmbedding.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(faust)
 export(generateAnnotationThresholds)
 export(getMMIForTargetMarker)
 export(growAnnotationForest)
+export(makeAnnotationEmbedding)
 export(mkAFPlotsForExpUnit)
 export(plotClusterRidgesInSample)
 export(plotFaustGates)
@@ -59,6 +60,7 @@ importFrom(stats,weighted.mean)
 importFrom(tidyr,gather)
 importFrom(utils,globalVariables)
 importFrom(utils,read.table)
+importFrom(uwot,umap)
 importFrom(viridis,magma)
 importFrom(viridis,scale_fill_viridis)
 importFrom(viridis,viridis)
