--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(backwardPhenotypeSelection)
 export(discoverPhenotypes)
 export(faust)
+export(forwardPhenotypeSelection)
 export(generateAnnotationThresholds)
+export(getCountsForTargetMarkers)
 export(getMMIForTargetMarker)
 export(growAnnotationForest)
 export(makeAnnotationEmbedding)
@@ -14,6 +16,7 @@ import(tidyr)
 importFrom(Biobase,AnnotatedDataFrame)
 importFrom(Biobase,pData)
 importFrom(Rcpp,sourceCpp)
+importFrom(bit,bitwhich)
 importFrom(cowplot,save_plot)
 importFrom(data.table,fwrite)
 importFrom(dplyr,group_by)
