--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: faust
 Title: Full Annotation Using Shape-constrained Trees
-Version: 0.5.1
+Version: 0.5.2
 Authors@R: c(person("Evan", "Greene", email = "egreene@fredhutch.org", role = c("aut", "cre")),
    	   person("Laurie", "Davies", role = c("ctb")),	       
 	   person("J.R.M.", "Hosking", role=c("ctb")),
@@ -25,7 +25,6 @@ Imports:
     flowCore,
     flowWorkspace,
     tidyr,
-    rlang,
     utils,
     grDevices,
     stats,
@@ -38,7 +37,7 @@ Imports:
     ggridges,
     fdrtool,
     Rcpp,
-    lme4,
+    uwot,
     bit
 VignetteBuilder: knitr
 LinkingTo: Rcpp    
@@ -47,7 +46,7 @@ License: GPL (>= 3) + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 URL: https://github.com/FredHutch/faust
 BugReports: https://github.com/FredHutch/faust/issues
 SystemRequirements: C++11
@@ -57,5 +56,4 @@ Suggests:
     ggdendro,
     BiocManager,
     knitr,
-    testthat,
-    uwot
+    testthat
