--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,8 +57,10 @@ importFrom(scamp,scamp)
 importFrom(stats,density)
 importFrom(stats,mad)
 importFrom(stats,median)
+importFrom(stats,p.adjust)
 importFrom(stats,qt)
 importFrom(stats,quantile)
+importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,weighted.mean)
